--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,12 +1,17 @@
 <div class="row">
     <div class="span12">
         <h2>Weather Information:</h2>
-        <div class="row">
+        <div class="row" ng:show="forecast_information.city == undefined">
+            <div class="span6">
+                <h3>Sorry, no weather information.</h3>
+            </div>
+        </div>
+        <div class="row" ng:hide="forecast_information.city == undefined">
             <div class="span6">
                 <h3>Current:</h3>
                 <p>City: {{forecast_information.city}}</p>
                 <ul>
-                    <li>
+                    <li ng:hide="current_conditions.condition == undefined || current_conditions.condition == ''">
                         Current Condition: {{current_conditions.condition}} <img class="thumbnail" src="http://www.google.com{{current_conditions.icon}}"></img>
                     </li>
                     <li>
