--- a/app/partials/info.html
+++ b/app/partials/info.html
@@ -1,1 +1,20 @@
-Info
+<div class="span12">
+    <div class="well popover-well">
+        <div class="popover-wrapper">
+            <div class="popover left">
+                <div class="arrow"></div>
+                <div class="inner">
+                    <h3 class="title">Who am I ?</h3>
+                    <div class="content">
+                        <span class="label notice">RP Geek</span>
+                        <p>DIT Year 3 Student</p>
+                        <p>Love Programming</p>
+                        <p>Helpful &amp; Passion</p>
+                        <p><a href="http://goo.gl/8Bnqx" target="_blank">More Info</a></p>
+                    </div>
+                </div>
+            </div>
+            <img class="photo" src="http://en.gravatar.com/userimage/18435121/f0f091a8be2317d07a48bf8951185c7d.jpg">
+        </div>
+    </div>
+</div>
