--- a/app/partials/settings.html
+++ b/app/partials/settings.html
@@ -1,3 +1,6 @@
+<h2>
+    Choose country to see report:
+</h2>
 <form action="/settings" method="POST">
     <fieldset>
         <div class="clearfix">
