--- a/app/partials/info.html
+++ b/app/partials/info.html
@@ -17,4 +17,5 @@
             <img class="photo" src="http://en.gravatar.com/userimage/18435121/f0f091a8be2317d07a48bf8951185c7d.jpg">
         </div>
     </div>
+    <h1><a href="/slides">Slides</a></h1>
 </div>
