--- a/app/partials/settings.html
+++ b/app/partials/settings.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="actions">
-            <input type="submit" class="btn primary" value="Save changes">&nbsp;<button type="reset" class="btn">Cancel</button>
+            <input type="submit" name="submit" class="btn primary" value="Save changes">&nbsp;<button type="reset" class="btn">Cancel</button>
         </div>
     </fieldset>
 </form>
